<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.djrapitops</groupId>
    <artifactId>Plan</artifactId>
    <version>4.5.0-SNAPSHOT</version>
    <modules>
        <module>common</module>
        <module>bukkit</module>
        <module>sponge</module>
        <module>bungeecord</module>
        <module>velocity</module>
        <module>plugin</module>
    </modules>
    <packaging>pom</packaging>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>paper-repo</id>
            <url>https://repo.destroystokyo.com/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sponge-repo</id>
            <url>https://repo.spongepowered.org/maven</url>
        </repository>
        <repository>
            <id>bungeecord-repo</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
        <repository> <!-- RedisBungee Repository -->
            <id>md_5-snapshots</id>
            <url>http://repo.md-5.net/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>velocity-repo</id>
            <url>https://repo.velocitypowered.com/snapshots/</url>
        </repository>
        <repository>
            <id>bstats-repo</id>
            <url>http://repo.bstats.org/content/repositories/releases/</url>
        </repository>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>bintray-rsl1122-Plan-repository</id>
            <name>bintray</name>
            <url>https://dl.bintray.com/rsl1122/Plan-repository</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.23.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.25.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.14.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.jayway.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>1.7.0</version>
            <scope>test</scope>
        </dependency>


        <!-- Dependency injection is used across the whole project.-->
        <dependency>
            <groupId>com.google.dagger</groupId>
            <artifactId>dagger</artifactId>
            <version>2.19</version>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency> <!-- Abstract Plugin Framework (API) -->
                <groupId>com.djrapitops</groupId>
                <artifactId>AbstractPluginFramework-api</artifactId>
                <version>3.4.0</version>
            </dependency>
            <dependency> <!-- Abstract Plugin Framework (Bukkit) -->
                <groupId>com.djrapitops</groupId>
                <artifactId>AbstractPluginFramework-bukkit</artifactId>
                <version>3.4.0</version>
            </dependency>
            <dependency> <!-- Abstract Plugin Framework (Sponge) -->
                <groupId>com.djrapitops</groupId>
                <artifactId>AbstractPluginFramework-sponge</artifactId>
                <version>3.4.0</version>
            </dependency>
            <dependency> <!-- Abstract Plugin Framework (BungeeCord) -->
                <groupId>com.djrapitops</groupId>
                <artifactId>AbstractPluginFramework-bungeecord</artifactId>
                <version>3.4.0</version>
            </dependency>
            <dependency> <!--  Abstract Plugin Framework (Velocity) -->
                <groupId>com.djrapitops</groupId>
                <artifactId>AbstractPluginFramework-velocity</artifactId>
                <version>3.4.0</version>
            </dependency>

            <dependency> <!-- SoftDepended Plugins -->
                <groupId>com.djrapitops</groupId>
                <artifactId>PlanPluginBridge</artifactId>
                <version>4.5.1</version>
            </dependency>


            <dependency> <!-- Bukkit API -->
                <groupId>org.bukkit</groupId>
                <artifactId>bukkit</artifactId>
                <version>1.12.2-R0.1-SNAPSHOT</version>
            </dependency>
            <dependency> <!-- Spigot API -->
                <groupId>org.spigotmc</groupId>
                <artifactId>spigot-api</artifactId>
                <version>1.12.2-R0.1-SNAPSHOT</version>
            </dependency>
            <dependency> <!-- Paper API -->
                <groupId>com.destroystokyo.paper</groupId>
                <artifactId>paper-api</artifactId>
                <version>1.12.2-R0.1-SNAPSHOT</version>
            </dependency>
            <dependency> <!-- Sponge API -->
                <groupId>org.spongepowered</groupId>
                <artifactId>spongeapi</artifactId>
                <version>7.1.0</version>
            </dependency>
            <dependency> <!-- BungeeCord API -->
                <groupId>net.md-5</groupId>
                <artifactId>bungeecord-api</artifactId>
                <version>1.12-SNAPSHOT</version>
            </dependency>
            <dependency> <!-- Velocity API -->
                <groupId>com.velocitypowered</groupId>
                <artifactId>velocity-api</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>

            <dependency> <!-- RedisBungee -->
                <groupId>com.imaginarycode.minecraft</groupId>
                <artifactId>RedisBungee</artifactId>
                <version>0.3.8-SNAPSHOT</version>
            </dependency>


            <dependency> <!-- HttpClient -->
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>4.5.6</version>
            </dependency>
            <dependency> <!-- String Replacer -->
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>1.6</version>
            </dependency>
            <dependency> <!--  HTML Compression -->
                <groupId>com.googlecode.htmlcompressor</groupId>
                <artifactId>htmlcompressor</artifactId>
                <version>1.5.2</version>
            </dependency>
            <dependency> <!--  Cache with invalidation -->
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>2.6.2</version>
            </dependency>

            <dependency> <!-- H2 -->
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>1.4.196</version> <!-- This version is necessary so Sponge will not crash -->
            </dependency>
            <dependency> <!-- MySQL Connection Pool -->
                <groupId>com.zaxxer</groupId>
                <artifactId>HikariCP</artifactId>
                <version>3.2.0</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-nop</artifactId>
                <version>1.7.25</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.25</version>
            </dependency>

            <dependency> <!-- Geo IP -->
                <groupId>com.maxmind.geoip2</groupId>
                <artifactId>geoip2</artifactId>
                <version>2.12.0</version>
            </dependency>

            <dependency> <!-- Guava -->
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>26.0-jre</version>
            </dependency>


            <dependency> <!-- Metrics (Bukkit) -->
                <groupId>org.bstats</groupId>
                <artifactId>bstats-bukkit</artifactId>
                <version>1.2</version>
            </dependency>
            <dependency> <!-- Metrics (Sponge) -->
                <groupId>org.bstats</groupId>
                <artifactId>bstats-sponge</artifactId>
                <version>1.2</version>
            </dependency>
            <dependency> <!-- Metrics (BungeeCord) -->
                <groupId>org.bstats</groupId>
                <artifactId>bstats-bungeecord</artifactId>
                <version>1.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>com.google.dagger</groupId>
                            <artifactId>dagger-compiler</artifactId>
                            <version>2.19</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.0</version>
                <executions> <!-- See https://dzone.com/articles/sharing-test-classes-between-multiple-modules-in-a -->
                    <execution>
                        <id>Create test jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.5.2</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.2</version>
            </plugin>
        </plugins>
    </build>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <sonar.language>java</sonar.language>
        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
        <sonar.jacoco.reportPaths>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPaths>
    </properties>
</project>
